# Camear

./: .gitignore
Camera/: README.md
Camera/flyCapture_example/: CMakeLists.txt  SingleCameraEx.cpp
Camera/spinnaker (do not use)/: CMakeLists.txt  multi_camera_image_capture.cpp  telerobcamera.cpp  telerobcamera.hpp  try.cpp  try2.cpp  try3.cpp
Camera/telerobcam_example/multicam_example/: main.cpp  telerobcamera.cpp  telerobcamera.hpp
CameraCalibration/: README.md
CameraCalibration/Calibration/: CMakeLists.txt  calibration_left_camera.xml  calibration_right_camera.xml  left_list.xml  readme.txt  right_list.xml  setting_left.xml  setting_right.xml
CameraCalibration/CalibrationMaster/: README (Ashkan).md  calib_intrinsic.cpp  calib_stereo.cpp  cam_left.yml  cam_right.yml  cam_stereo.yml
CameraCalibration/CalibrationMaster/latest_calibration/: cam_left.yml  cam_right.yml  cam_stereo.yml
CameraCalibration/ObjectTracking/3DTracking/: CMakeLists.txt  fileprac.cpp  filepracread.cpp  filepracwrite.cpp  main.cpp
CameraCalibration/ObjectTracking/HSV_threshold/: CMakeLists.txt  main.cpp
CameraCalibration/RecordFrames/: CMakeLists.txt  main.cpp  telerobcamera.cpp
